# 3DRendering

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  PackageDescription.txt  README.md
3DRendering/: 3DRendering.cpp  CMakeLists.txt
Content/Sponza/: Sponza.gltf
Shaders/: FinalPass.frag.hlsl  FinalPass.vert.hlsl  Forward.frag.hlsl  Forward.vert.hlsl
enc_temp_folder/c8246f70bb3ff097b1d73192cf5fd429/: 3DRendering.cpp
